--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <a href="coffeeClicker/index.html">Coffee Clicker!</a>
-    <a href="DoTheMath/dist/public/index.html">Do the Math!</a>
+    <a href="public/index.html">Do the Math!</a>
   </body>
 </html>
