Minor changes to landing page to make it easier to click on games

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Generic homepage</title>
   </head>
   <body>
-    <a href="coffeeClicker/index.html">Coffee Clicker!</a>
-    <a href="DoTheMath/public/index.html">Do the Math!</a>
+    <div class="center">Generic landing page</div>
+    <ul>
+      <li><a href="coffeeClicker/index.html">Coffee Clicker!</a></li>
+      <li><a href="DoTheMath/public/index.html">Do the Math!</a></li>
+    </ul>
   </body>
 </html>
