Added link to capstone

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <ul>
       <li><a href="coffeeClicker/index.html">Coffee Clicker!</a></li>
       <li><a href="DoTheMath/public/index.html">Do the Math!</a></li>
+      <li>
+        <a href="https://becoming-cyborg.herokuapp.com/">Becoming Cyborg!</a>
+      </li>
     </ul>
   </body>
 </html>
