Added new product - a PoE Calculator

--- a/DoTheMath/public/index.html
+++ b/DoTheMath/public/index.html
@@ -34,6 +34,6 @@
         </p>
       </section>
     </main>
-    <script type="module" src="bundle.js"></script>
+    <script type="module" src="../../scripts/DoTheMath.bundle.js"></script>
   </body>
 </html>
