--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <li>
         <a href="https://becoming-cyborg.herokuapp.com/">Becoming Cyborg!</a>
       </li>
+      <li>
+        <a href="PoeHideoutCalc/public/index.html"
+          >Path of Exile Hideout Calculator!</a
+        >
+      </li>
     </ul>
   </body>
 </html>
